# fastapi-ai-blog

./: .example_env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: formatter.yaml
src/: alembic.ini  cli.py  main.py
src/commands/: __init__.py  user.py
src/core/config/: __init__.py  constansts.py  settings.py
src/db/: __init__.py  base.py  utils.py
src/db/migrations/: env.py
src/db/migrations/versions/: 44953ce074c5_fix_posts.py  ac3c2ff375ab_add_posts_comments_settings.py  d3c753c804cc_initial_commit.py
src/db/models/: __init__.py  base.py  posts.py  user.py  users.py
src/domains/: permissions.py  providers.py
src/domains/controllers/: __init__.py  base.py  oauth.py  post.py  posts.py  user.py
src/domains/dto/: __init__.py  comment.py  post.py  posts.py  user.py  users.py
src/domains/providers/: __init__.py  oauth.py  users.py
src/domains/repositories/: base.py  post.py  posts.py  user.py
src/schemas/: comments.py  oauth.py  posts.py  users.py
src/services/: filters.py  oauth.py
src/services/dependencies/: __init__.py  base.py  controllers.py  filters.py  oauth.py  users.py
src/services/errors/: __init__.py  base.py  oauth.py
src/services/permissions/: __init__.py  base.py  comments.py  posts.py  users.py
src/services/repositories/: base.py  comments.py  posts.py  users.py
src/services/schemas/: oauth.py  posts.py  user.py
src/services/security/: __init__.py  oauth.py
src/tests/: conftest.py  factories.py
src/tests/api_tests/: conftest.py  test_comments.py  test_oauth.py  test_posts.py  test_users.py
src/tests/domain_tests/: conftest.py  test_ouath.py  test_posts.py  test_users.py
src/tests/factories/: posts.py  user.py  users.py
src/web/: __init__.py  app.py  middlewares.py
src/web/api/: __init__.py  comments.py  oauth.py  posts.py  users.py
src/web/dependencies/: __init__.py  base.py  filters.py  oauth.py
